Create block grid for sidebar navigation and sidebar main content

--- a/uSync/v9/Content/page-1.config
+++ b/uSync/v9/Content/page-1.config
@@ -13,18 +13,39 @@
     <Template />
   </Info>
   <Properties>
-    <mainContent>
+    <newPage>
+      <Value><![CDATA[0]]></Value>
+    </newPage>
+    <sidebarMainContent>
       <Value><![CDATA[{
   "layout": {
     "Umbraco.BlockGrid": [
       {
+        "contentUdi": "umb://element/9cb2050db710414b93e06e5d1132a9d6",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/799f7b53da8a41719c06ebe18d7c5db4",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1,
-        "contentUdi": "umb://element/e921dd5d4897467da8e79be5741d0c03"
+        "contentUdi": "umb://element/8c47a2bcad6a4b7bb2109e4e29c3b418"
       },
       {
-        "contentUdi": "umb://element/6d1044188f9a42d389885ec82e8b0b2a",
+        "contentUdi": "umb://element/07619fb1ffb34f2a914e7b996a1bc4ce",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/beeaf6914c0f4fd8b17633462817da17",
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
@@ -33,10 +54,34 @@
   },
   "contentData": [
     {
+      "contentTypeKey": "d7813145-8446-4fd2-a1d8-289ea61bffc3",
+      "udi": "umb://element/9cb2050db710414b93e06e5d1132a9d6",
+      "title": "National Institute for Health Specialties (NIHS) Establishment",
+      "fontSize": "25",
+      "color": {
+        "value": "dc3545",
+        "label": "Danger",
+        "sortOrder": 5,
+        "id": "6"
+      }
+    },
+    {
+      "contentTypeKey": "ce70f7db-39fc-462b-a83a-313421f02d56",
+      "udi": "umb://element/799f7b53da8a41719c06ebe18d7c5db4",
+      "links": [
+        {
+          "udi": "umb://document/23af885007a545899b731ad0f3bd8daa"
+        },
+        {
+          "udi": "umb://document/8a6082dfdfff4da78f4997bcc899b04e"
+        }
+      ]
+    },
+    {
       "contentTypeKey": "b375f265-8d02-4325-8840-68499254977a",
-      "udi": "umb://element/e921dd5d4897467da8e79be5741d0c03",
+      "udi": "umb://element/8c47a2bcad6a4b7bb2109e4e29c3b418",
       "text": {
-        "markup": "<p>Page 1<br>Page 1<br>Page 1<br>Page 1<br>Page 1<br>Page 1<br>Page 1<br>Page 1<br>Page 1</p>",
+        "markup": "<p>National Institute for Health Specialties (NIHS) was established by Cabinet Decree <strong>No. 28 of 2014</strong> as a national institution mandated to spearhead, regulate, and organize professional development for the health workforce with a particular emphasis on specialty training. The NIHS is nested within the United Arab Emirates University, the premier national higher education institution in the country, and is governed by a high profile Board of Directors chaired by HE Minister of Education.<br><br><a style=\"color: red;\" href=\"/{localLink:umb://document/8a6082dfdfff4da78f4997bcc899b04e}\" title=\"Page 1\">Learn more...  <img src=\"?rmode=max&amp;width=16&amp;height=14\" alt=\"\" width=\"16\" height=\"14\" data-udi=\"umb://media/4e2000772a44421ca937b4bafd42109c\"></a></p>",
         "blocks": {
           "contentData": [],
           "settingsData": []
@@ -44,19 +89,26 @@
       }
     },
     {
-      "contentTypeKey": "0733cfa5-6b36-4756-b635-38b8e5b8c90b",
-      "udi": "umb://element/6d1044188f9a42d389885ec82e8b0b2a",
-      "image": [
-        {
-          "key": "896d1300-99b7-4b4b-ae44-3dfdfe1d0248",
-          "mediaKey": "4f46a6ba-40d1-40bf-b5bb-cbe0bf8125a4"
+      "contentTypeKey": "d7813145-8446-4fd2-a1d8-289ea61bffc3",
+      "udi": "umb://element/07619fb1ffb34f2a914e7b996a1bc4ce",
+      "title": "National Institute for Health Specialties Objectives",
+      "fontSize": "25",
+      "color": ""
+    },
+    {
+      "contentTypeKey": "b375f265-8d02-4325-8840-68499254977a",
+      "udi": "umb://element/beeaf6914c0f4fd8b17633462817da17",
+      "text": {
+        "markup": "<p style=\"text-align: left;\"><img style=\"display: block; margin-left: auto; margin-right: auto;\" src=\"?rmode=max&amp;width=500\" alt=\"Test image\" width=\"500\" height=\"361\" data-udi=\"umb://media/fab53eaa30364628b072647b63ea7682\"><br><br>The National Institute for Health Specialties aims to raise the level of performance of health practitioners in the country, by developing an integrated high-quality evaluation system that helps assess the experiences and skills of health practitioners by undergoing specialized professional exams in various medical fields using the latest applied and technological tools. NIHS is also keen, through its global partnerships, to continuously develop the specialized professional examinations to achieve leadership and excellence, and to ensure that it keeps pace with scientific and technological developments in the medical field.<br><br>The National Institute for Health Specialties seeks to raise the level of knowledge and skills for all health practitioners, to ensure the provision of the best health services that contribute to promoting the concept of a healthy and safe society, and raising the quality of life of individuals and society.</p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
         }
-      ],
-      "caption": "The Scope and Themes of the Conference:"
+      }
     }
   ],
   "settingsData": []
 }]]></Value>
-    </mainContent>
+    </sidebarMainContent>
   </Properties>
 </Content>
