--- a/uSync/v9/Content/sidebar.config
+++ b/uSync/v9/Content/sidebar.config
@@ -19,42 +19,19 @@
     <isIndexable>
       <Value><![CDATA[1]]></Value>
     </isIndexable>
-    <mainContent>
+    <metaDescription>
+      <Value><![CDATA[]]></Value>
+    </metaDescription>
+    <metaTitle>
+      <Value><![CDATA[]]></Value>
+    </metaTitle>
+    <sidebarNavigation>
       <Value><![CDATA[{
   "layout": {
     "Umbraco.BlockGrid": [
       {
-        "contentUdi": "umb://element/469657287cb04b8ba0c816e7c8fc0b94",
-        "areas": [
-          {
-            "key": "e56f1c64-a3a3-44fa-9250-0d657d968446",
-            "items": [
-              {
-                "contentUdi": "umb://element/3b74f978e8074b7fbe1515debc73bd6b",
-                "areas": [],
-                "columnSpan": 12,
-                "rowSpan": 1
-              }
-            ]
-          },
-          {
-            "key": "1720a194-5555-4f09-840c-8058e77d73e1",
-            "items": [
-              {
-                "contentUdi": "umb://element/adaa121171534d9dbde9d91b054be2da",
-                "areas": [],
-                "columnSpan": 12,
-                "rowSpan": 1
-              },
-              {
-                "areas": [],
-                "columnSpan": 12,
-                "rowSpan": 1,
-                "contentUdi": "umb://element/a3e27151ae7d4e7db57f5cb9ac5df429"
-              }
-            ]
-          }
-        ],
+        "contentUdi": "umb://element/396377a397b645bdad965a280beda761",
+        "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
       }
@@ -63,45 +40,20 @@
   "contentData": [
     {
       "contentTypeKey": "df2c7195-db0d-4976-afa2-2d5d44e0c0fe",
-      "udi": "umb://element/469657287cb04b8ba0c816e7c8fc0b94"
-    },
-    {
-      "contentTypeKey": "8e9c49cf-3be4-4250-8602-50a939ee01f4",
-      "udi": "umb://element/3b74f978e8074b7fbe1515debc73bd6b",
-      "text": "Day-01",
-      "color": {
-        "value": "2c3e50",
-        "label": "Secondary",
-        "sortOrder": 1,
-        "id": "2"
-      }
-    },
-    {
-      "contentTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
-      "udi": "umb://element/adaa121171534d9dbde9d91b054be2da",
-      "image": [
+      "udi": "umb://element/396377a397b645bdad965a280beda761",
+      "title": "Related Content",
+      "links": [
         {
-          "key": "b2337145-a621-4bca-b30f-0140c240331a",
-          "mediaKey": "08b4ae63-ad37-4342-a087-e2060715ac0a"
-        }
-      ],
-      "link": [
-        {
+          "name": "Media Center",
+          "target": "_blank",
           "udi": "umb://document/d03de1ae730448fd8d0bc2a1038e3695"
-        }
-      ]
-    },
-    {
-      "contentTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
-      "udi": "umb://element/a3e27151ae7d4e7db57f5cb9ac5df429",
-      "image": [
+        },
         {
-          "key": "b2337145-a621-4bca-b30f-0140c240331a",
-          "mediaKey": "08b4ae63-ad37-4342-a087-e2060715ac0a"
-        }
-      ],
-      "link": [
+          "name": "Our Responsibilities",
+          "udi": "umb://document/d03de1ae730448fd8d0bc2a1038e3695"
+        },
         {
+          "name": "Organization Structure",
           "udi": "umb://document/d03de1ae730448fd8d0bc2a1038e3695"
         }
       ]
@@ -109,13 +61,7 @@
   ],
   "settingsData": []
 }]]></Value>
-    </mainContent>
-    <metaDescription>
-      <Value><![CDATA[]]></Value>
-    </metaDescription>
-    <metaTitle>
-      <Value><![CDATA[]]></Value>
-    </metaTitle>
+    </sidebarNavigation>
     <umbracoNaviHide>
       <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
