--- a/uSync/v9/ContentTypes/breadcrumb.config
+++ b/uSync/v9/ContentTypes/breadcrumb.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="cd1aaca8-7cc7-44a9-8fed-42d823e4391e" Alias="sidebarProperties" Level="2">
+<ContentType Key="ce70f7db-39fc-462b-a83a-313421f02d56" Alias="breadcrumb" Level="4">
   <Info>
-    <Name>Sidebar Properties</Name>
-    <Icon>barcode color-black</Icon>
+    <Name>Breadcrumb</Name>
+    <Icon>angle-right color-black</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Compositions</Folder>
+    <Folder>Components/Block+Grid/Content+Models</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,14 +22,14 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>767c1dbb-d067-4d49-a785-1a70ca84b87a</Key>
-      <Name>Sidebar Navigation</Name>
-      <Alias>sidebarNavigation</Alias>
-      <Definition>3a6e46aa-c4a5-4d16-a4e0-ec817d579161</Definition>
-      <Type>Umbraco.BlockGrid</Type>
+      <Key>67dbeaf1-5a52-4421-bbca-3f0dc27bcc18</Key>
+      <Name>Links</Name>
+      <Alias>links</Alias>
+      <Definition>b4e3535a-1753-47e2-8568-602cf8cfee6f</Definition>
+      <Type>Umbraco.MultiUrlPicker</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Use this property to build up the content for the sidebar navigation.]]></Description>
+      <Description><![CDATA[Choose the links for this path.]]></Description>
       <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
@@ -40,7 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>e315193d-f821-4b5c-8ee7-6db63824df51</Key>
+      <Key>8d3e7567-5981-4f51-8e0c-ba376f249e5c</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
