--- a/uSync/v9/ContentTypes/mainsidebar.config
+++ b/uSync/v9/ContentTypes/mainsidebar.config
@@ -16,7 +16,7 @@
     </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
-      <Composition Key="e178f835-bdeb-4563-812d-b88a5bc1a654">contentProperties</Composition>
+      <Composition Key="29924d9b-6871-4a60-89a3-993f5268bfef">sidebarMainContentProperties</Composition>
     </Compositions>
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -32,7 +32,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Check true if you want to open page without sidebar.]]></Description>
-      <SortOrder>5</SortOrder>
+      <SortOrder>1</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -46,7 +46,7 @@
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
-      <SortOrder>20</SortOrder>
+      <SortOrder>70</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
