--- a/uSync/v9/ContentTypes/sidebarmaincontentproperties.config
+++ b/uSync/v9/ContentTypes/sidebarmaincontentproperties.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="cd1aaca8-7cc7-44a9-8fed-42d823e4391e" Alias="sidebarProperties" Level="2">
+<ContentType Key="29924d9b-6871-4a60-89a3-993f5268bfef" Alias="sidebarMainContentProperties" Level="2">
   <Info>
-    <Name>Sidebar Properties</Name>
-    <Icon>barcode color-black</Icon>
+    <Name>Sidebar Main Content Properties</Name>
+    <Icon>icon-defrag</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -22,15 +22,15 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>767c1dbb-d067-4d49-a785-1a70ca84b87a</Key>
-      <Name>Sidebar Navigation</Name>
-      <Alias>sidebarNavigation</Alias>
-      <Definition>3a6e46aa-c4a5-4d16-a4e0-ec817d579161</Definition>
+      <Key>572b1ee6-1ea5-491c-9576-32385f4cdfa6</Key>
+      <Name>Sidebar Main Content</Name>
+      <Alias>sidebarMainContent</Alias>
+      <Definition>7a964e80-6f26-4a2b-8add-19d74a37ed79</Definition>
       <Type>Umbraco.BlockGrid</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Use this property to build up the content for the sidebar navigation.]]></Description>
-      <SortOrder>0</SortOrder>
+      <Description><![CDATA[Use this property to build up the content for the page]]></Description>
+      <SortOrder>20</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -40,11 +40,11 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>e315193d-f821-4b5c-8ee7-6db63824df51</Key>
+      <Key>344af11f-817d-4934-8bdb-d7b6206b3f10</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
+      <SortOrder>70</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
