--- a/uSync/v9/DataTypes/BlockGridSidebarNavigation.config
+++ b/uSync/v9/DataTypes/BlockGridSidebarNavigation.config
@@ -10,87 +10,10 @@
   "BlockGroups": [],
   "Blocks": [
     {
-      "allowAtRoot": false,
-      "allowInAreas": true,
-      "areaGridColumns": null,
-      "areas": [],
-      "backgroundColor": null,
-      "columnSpanOptions": [],
-      "contentElementTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
-      "groupKey": null,
-      "iconColor": null,
-      "inlineEditing": false,
-      "label": "",
-      "rowMaxSpan": 1,
-      "rowMinSpan": 1,
-      "settingsElementTypeKey": null,
-      "stylesheet": null,
-      "thumbnail": null,
-      "view": null
-    },
-    {
-      "allowAtRoot": false,
-      "allowInAreas": true,
-      "areaGridColumns": null,
-      "areas": [],
-      "backgroundColor": null,
-      "columnSpanOptions": [],
-      "contentElementTypeKey": "8e9c49cf-3be4-4250-8602-50a939ee01f4",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
-      "groupKey": null,
-      "iconColor": null,
-      "inlineEditing": false,
-      "label": "",
-      "rowMaxSpan": 1,
-      "rowMinSpan": 1,
-      "settingsElementTypeKey": null,
-      "stylesheet": null,
-      "thumbnail": null,
-      "view": null
-    },
-    {
       "allowAtRoot": true,
-      "allowInAreas": false,
+      "allowInAreas": true,
       "areaGridColumns": null,
-      "areas": [
-        {
-          "alias": "title",
-          "columnSpan": 12,
-          "createLabel": "Add a title",
-          "key": "e56f1c64-a3a3-44fa-9250-0d657d968446",
-          "maxAllowed": null,
-          "minAllowed": 0,
-          "rowSpan": 1,
-          "specifiedAllowance": [
-            {
-              "elementTypeKey": "8e9c49cf-3be4-4250-8602-50a939ee01f4",
-              "groupKey": null,
-              "maxAllowed": 1,
-              "minAllowed": null
-            }
-          ]
-        },
-        {
-          "alias": "link",
-          "columnSpan": 12,
-          "createLabel": "Add a link",
-          "key": "1720a194-5555-4f09-840c-8058e77d73e1",
-          "maxAllowed": null,
-          "minAllowed": 0,
-          "rowSpan": 1,
-          "specifiedAllowance": [
-            {
-              "elementTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
-              "groupKey": null,
-              "maxAllowed": null,
-              "minAllowed": null
-            }
-          ]
-        }
-      ],
+      "areas": [],
       "backgroundColor": null,
       "columnSpanOptions": [],
       "contentElementTypeKey": "df2c7195-db0d-4976-afa2-2d5d44e0c0fe",
@@ -99,13 +22,13 @@
       "groupKey": null,
       "iconColor": null,
       "inlineEditing": false,
-      "label": "",
+      "label": "{{ title }}",
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     }
   ],
   "CreateLabel": null,
