--- a/uSync/v9/Content/page-2.config
+++ b/uSync/v9/Content/page-2.config
@@ -13,24 +13,69 @@
     <Template />
   </Info>
   <Properties>
-    <mainContent>
+    <newPage>
+      <Value><![CDATA[1]]></Value>
+    </newPage>
+    <sidebarMainContent>
       <Value><![CDATA[{
   "layout": {
     "Umbraco.BlockGrid": [
       {
+        "contentUdi": "umb://element/09e01af9764b4e0f8c905f9b4e5b5007",
         "areas": [],
         "columnSpan": 12,
-        "rowSpan": 1,
-        "contentUdi": "umb://element/34c9afce9475403da35b5f3ddb324db1"
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/d9bceb727315403897c43ba065d2fb94",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/ec2743a9f4e142668ecae0b9f18c835a",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/0a5010848a924572b1ce0ced00324667",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
       }
     ]
   },
   "contentData": [
     {
+      "contentTypeKey": "d7813145-8446-4fd2-a1d8-289ea61bffc3",
+      "udi": "umb://element/09e01af9764b4e0f8c905f9b4e5b5007",
+      "title": "Scientific Committees",
+      "fontSize": "25"
+    },
+    {
+      "contentTypeKey": "ce70f7db-39fc-462b-a83a-313421f02d56",
+      "udi": "umb://element/d9bceb727315403897c43ba065d2fb94",
+      "links": [
+        {
+          "udi": "umb://document/23af885007a545899b731ad0f3bd8daa"
+        },
+        {
+          "udi": "umb://document/556fbe508675415e902979e0b9d72b61"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "d7813145-8446-4fd2-a1d8-289ea61bffc3",
+      "udi": "umb://element/ec2743a9f4e142668ecae0b9f18c835a",
+      "title": "The National Institute for Health Specialties has specialized scientific committees that were formed by the board of directors. The specialized committees have an important role in:",
+      "fontSize": "25"
+    },
+    {
       "contentTypeKey": "b375f265-8d02-4325-8840-68499254977a",
-      "udi": "umb://element/34c9afce9475403da35b5f3ddb324db1",
+      "udi": "umb://element/0a5010848a924572b1ce0ced00324667",
       "text": {
-        "markup": "<p>Page 2<br>Page 2<br>Page 2<br>Page 2<br>Page 2<br>Page 2<br>Page 2<br>Page 2<br>Page 2</p>",
+        "markup": "<ul class=\"list-disc list-inside\">\n<li>Overseeing specialty training programs (Residency Programs) and postgraduate studies and ensure their global standards.</li>\n<li>Setting assessment standards for hospitals, education centers and specialty programs and provide technical advise on the extent to which hospitals, training centers and specialty programs conform to these standards.</li>\n<li>Establishing specialized professional examinations with international standards.</li>\n<li>Providing guidance on accrediting the continuing education and professional development programs.</li>\n<li>Recommending the issuance of professional certificates to the council.</li>\n</ul>",
         "blocks": {
           "contentData": [],
           "settingsData": []
@@ -40,6 +85,6 @@
   ],
   "settingsData": []
 }]]></Value>
-    </mainContent>
+    </sidebarMainContent>
   </Properties>
 </Content>
