Remove Temp folder from Git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /umbraco/Data/TEMP/MainDom_fdc350c3887b4f1a447f06eb1b8d8bf8790b336d.lock
 
+/umbraco/Data/TEMP
