Add card component

--- a/uSync/v9/Content/new-page.config
+++ b/uSync/v9/Content/new-page.config
@@ -57,6 +57,54 @@
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/c26ba066a90742e7b904c50e8b786bab",
+        "areas": [
+          {
+            "key": "12dfd13b-55c6-46d9-85a8-1c9ef58420de",
+            "items": [
+              {
+                "contentUdi": "umb://element/17ba674b68c74322b700938454a5969c",
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/322020b1d58a48dd9dd13b615e90d97f"
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/0a06279f2b9b4dc9aec273f50c38f9bf"
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/47a8da91b1984fa99bf96a7a3044106f"
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/b0c5ce9b4b4b406ca9302e8ef788efd3"
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/b398805eb3fc43d4a9eab1615165eb99"
+              }
+            ]
+          }
+        ],
+        "columnSpan": 12,
+        "rowSpan": 1
       }
     ]
   },
@@ -78,6 +126,124 @@
       "link": [
         {
           "name": "Give us your feedback",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "3f589498-95dc-4374-ab6c-ef5d4c0943b5",
+      "udi": "umb://element/c26ba066a90742e7b904c50e8b786bab"
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/17ba674b68c74322b700938454a5969c",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/322020b1d58a48dd9dd13b615e90d97f",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/0a06279f2b9b4dc9aec273f50c38f9bf",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/47a8da91b1984fa99bf96a7a3044106f",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/b0c5ce9b4b4b406ca9302e8ef788efd3",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
+          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "udi": "umb://element/b398805eb3fc43d4a9eab1615165eb99",
+      "image": [
+        {
+          "key": "f7a7d3f7-6fd3-4981-93b8-1938ed896ef8",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "date": "2025-04-22T00:00:00",
+      "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
+      "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
+      "link": [
+        {
+          "name": "View details",
           "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
         }
       ]
