--- a/uSync/v9/DataTypes/BlockGridMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridMainContent.config
@@ -576,6 +576,73 @@
       "stylesheet": "~/css/styles.css",
       "thumbnail": null,
       "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
+    },
+    {
+      "allowAtRoot": false,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [
+        {
+          "columnSpan": 4
+        },
+        {
+          "columnSpan": 6
+        }
+      ],
+      "contentElementTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": "~/css/styles.css",
+      "thumbnail": null,
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": false,
+      "areaGridColumns": null,
+      "areas": [
+        {
+          "alias": "card",
+          "columnSpan": 12,
+          "createLabel": "Add cards",
+          "key": "12dfd13b-55c6-46d9-85a8-1c9ef58420de",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
+              "groupKey": null,
+              "maxAllowed": null,
+              "minAllowed": null
+            }
+          ]
+        }
+      ],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "3f589498-95dc-4374-ab6c-ef5d4c0943b5",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "CreateLabel": null,
