--- a/uSync/v9/Content/page-2.config
+++ b/uSync/v9/Content/page-2.config
@@ -28,17 +28,27 @@
       },
       {
         "contentUdi": "umb://element/d9bceb727315403897c43ba065d2fb94",
+
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
       },
       {
         "contentUdi": "umb://element/ec2743a9f4e142668ecae0b9f18c835a",
+
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
       },
       {
+
+        "contentUdi": "umb://element/ec2743a9f4e142668ecae0b9f18c835a",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+
         "contentUdi": "umb://element/0a5010848a924572b1ce0ced00324667",
         "areas": [],
         "columnSpan": 12,
@@ -85,6 +95,7 @@
   ],
   "settingsData": []
 }]]></Value>
+
 
     </sidebarMainContent>
 
