Create Tabs for media center and pagination with search

--- a/uSync/v9/Content/site-settings.config
+++ b/uSync/v9/Content/site-settings.config
@@ -246,6 +246,12 @@
                 "rowSpan": 1
               },
               {
+                "contentUdi": "umb://element/09e3e49aa8164f1a96bc1c0c92261053",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
                 "areas": [],
                 "columnSpan": 2,
                 "rowSpan": 1,
@@ -350,6 +356,17 @@
           "udi": "umb://document/a6d2478909c34a8b958d5f6b7269c287"
         }
       ]
+    },
+    {
+      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
+      "udi": "umb://element/09e3e49aa8164f1a96bc1c0c92261053",
+      "title": "Media center",
+      "link": [
+        {
+          "udi": "umb://document/42d78374528a40c088e6e8ded5e3efe2"
+        }
+      ],
+      "childLinks": ""
     }
   ],
   "settingsData": []
