--- a/uSync/v9/DataTypes/BlockGridMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridMainContent.config
@@ -599,7 +599,7 @@
       "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
-      "allowAtRoot": false,
+      "allowAtRoot": true,
       "allowInAreas": true,
       "areaGridColumns": null,
       "areas": [],
@@ -615,9 +615,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
       "allowAtRoot": true,
@@ -651,7 +651,7 @@
           "rowSpan": 1,
           "specifiedAllowance": [
             {
-              "elementTypeKey": "ca5927f5-d6fb-4364-aa85-fcfbc97f93f6",
+              "elementTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
               "groupKey": null,
               "maxAllowed": null,
               "minAllowed": null
