--- a/uSync/v9/DataTypes/BlockGridSidebarMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridSidebarMainContent.config
@@ -71,6 +71,27 @@
       "stylesheet": "~/css/styles.css",
       "thumbnail": null,
       "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": false,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": "~/css/styles.css",
+      "thumbnail": null,
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     }
   ],
   "CreateLabel": null,
