--- a/uSync/v9/Content/new-page.config
+++ b/uSync/v9/Content/new-page.config
@@ -53,12 +53,6 @@
   "layout": {
     "Umbraco.BlockGrid": [
       {
-        "contentUdi": "umb://element/8fa981e7da5b48a2a11ee418bd3a09f6",
-        "areas": [],
-        "columnSpan": 12,
-        "rowSpan": 1
-      },
-      {
         "contentUdi": "umb://element/dfcca369048340a9bc0eb2fcd38213ca",
         "areas": [
           {
@@ -76,15 +70,50 @@
             "key": "f386d5e5-409a-4bfb-acdb-6d57b875132e",
             "items": [
               {
-                "contentUdi": "umb://element/0866ab18173c43e1b0c92886e1147b15",
+                "contentUdi": "umb://element/76219ba39f9c4264aa68040978d48ea2",
                 "areas": [],
                 "columnSpan": 12,
                 "rowSpan": 1
               },
               {
-                "contentUdi": "umb://element/9c74c093229e46fd93499bd25d5d7508",
+                "contentUdi": "umb://element/32ad038137de4ba58ba9b452233aec1c",
                 "areas": [],
                 "columnSpan": 12,
+                "rowSpan": 1
+              }
+            ]
+          }
+        ],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/a73cfab3cf434e9faa51bcfe214c1b91",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/03ce7c7ec384462d8b06d74e9e092542",
+        "areas": [
+          {
+            "key": "5a7d6816-a685-4042-b6b2-0eca98b59813",
+            "items": [
+              {
+                "contentUdi": "umb://element/29f760c8690d43dfb26966ca8fac7218",
+                "areas": [],
+                "columnSpan": 6,
+                "rowSpan": 1
+              }
+            ]
+          },
+          {
+            "key": "8a3da1e0-c36e-444f-bdb5-350164c1be23",
+            "items": [
+              {
+                "contentUdi": "umb://element/bf7562d6fe79486f9996a90402f42f01",
+                "areas": [],
+                "columnSpan": 6,
                 "rowSpan": 1
               }
             ]
@@ -97,27 +126,6 @@
   },
   "contentData": [
     {
-      "contentTypeKey": "d6ed994a-ddbc-459b-9760-656248290a9f",
-      "udi": "umb://element/8fa981e7da5b48a2a11ee418bd3a09f6",
-      "questionContent": "Did you find this content useful?",
-      "shortDescription": "You can help us improve by providing your feedback about your experience.",
-      "option1": "Yes",
-      "option2": "No",
-      "image": [
-        {
-          "key": "b94e7cd2-df63-4f23-b0c0-4cd083b60573",
-          "mediaKey": "4f46a6ba-40d1-40bf-b5bb-cbe0bf8125a4"
-        }
-      ],
-      "questionService": "Have you used our services at our service centre or digitally recently?",
-      "link": [
-        {
-          "name": "Give us your feedback",
-          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-        }
-      ]
-    },
-    {
       "contentTypeKey": "0ca0dcbd-2dd4-49f5-bb18-0840c65cbef0",
       "udi": "umb://element/dfcca369048340a9bc0eb2fcd38213ca"
     },
@@ -129,141 +137,56 @@
       "fontSize": "25"
     },
     {
-      "contentTypeKey": "ca5927f5-d6fb-4364-aa85-fcfbc97f93f6",
-      "udi": "umb://element/0866ab18173c43e1b0c92886e1147b15",
-      "title": "News",
-      "cards": {
-        "layout": {
-          "Umbraco.BlockList": [
-            {
-              "contentUdi": "umb://element/403766e160cc43cfb480ddfd4d60458e"
-            },
-            {
-              "contentUdi": "umb://element/3c987ee666cc41e3affa7ca0634a69b3"
-            },
-            {
-              "contentUdi": "umb://element/c963d9091cd54c24ad0d19a36a1a377e"
-            }
-          ]
-        },
-        "contentData": [
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/403766e160cc43cfb480ddfd4d60458e",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          },
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/3c987ee666cc41e3affa7ca0634a69b3",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          },
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/c963d9091cd54c24ad0d19a36a1a377e",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          }
-        ],
-        "settingsData": []
+      "contentTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
+      "udi": "umb://element/76219ba39f9c4264aa68040978d48ea2",
+      "contentItem": "umb://document/caccb18c0c4d4413ac609005d129d636"
+    },
+    {
+      "contentTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
+      "udi": "umb://element/32ad038137de4ba58ba9b452233aec1c",
+      "contentItem": "umb://document/78237ec961174970a9975388f2de4153"
+    },
+    {
+      "contentTypeKey": "ac1e6b74-13c1-4714-896d-84e4fa10a6fc",
+      "udi": "umb://element/a73cfab3cf434e9faa51bcfe214c1b91",
+      "image": [
+        {
+          "key": "6e60c80e-196d-4166-8f35-4005dc5c8cd5",
+          "mediaKey": "4b67804e-bd4b-46c3-a174-2f86f99cea70"
+        }
+      ],
+      "title": "Day-01",
+      "shortDescription": "Related Content",
+      "link": [
+        {
+          "udi": "umb://document/23af885007a545899b731ad0f3bd8daa"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "a1fbc819-98b9-47f7-a2d6-59a1fec0fd3a",
+      "udi": "umb://element/03ce7c7ec384462d8b06d74e9e092542"
+    },
+    {
+      "contentTypeKey": "b375f265-8d02-4325-8840-68499254977a",
+      "udi": "umb://element/29f760c8690d43dfb26966ca8fac7218",
+      "text": {
+        "markup": "<div style=\"background-color: red;\">\n<div class=\" text-whitely-50 text-xl xl:text-2xl 2xl:text-3xl leading-normal font-bold font-inter rtl:font-alexandria mb-6 lg:mb-7 xl:mb-8 2xl:mb-9\"><span class=\"text-primary\" style=\"color: rgb(26, 188, 156);\">Mission</span></div>\n<p class=\"text-whitely-50\"><span class=\"text-primary\" style=\"color: rgb(26, 188, 156);\">To set and maintain high professional standards towards strengthening the health workforce capacity and promoting health.</span></p>\n</div>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
       }
     },
     {
-      "contentTypeKey": "ca5927f5-d6fb-4364-aa85-fcfbc97f93f6",
-      "udi": "umb://element/9c74c093229e46fd93499bd25d5d7508",
-      "title": "Events",
-      "cards": {
-        "layout": {
-          "Umbraco.BlockList": [
-            {
-              "contentUdi": "umb://element/9ceb6213aee94c4a918af63967663792"
-            },
-            {
-              "contentUdi": "umb://element/17e3ac6628794ee7ab7c1f717e023614"
-            }
-          ]
-        },
-        "contentData": [
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/9ceb6213aee94c4a918af63967663792",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          },
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/17e3ac6628794ee7ab7c1f717e023614",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          }
-        ],
-        "settingsData": []
+      "contentTypeKey": "b375f265-8d02-4325-8840-68499254977a",
+      "udi": "umb://element/bf7562d6fe79486f9996a90402f42f01",
+      "text": {
+        "markup": "<div class=\"text-whitely-50 text-xl xl:text-2xl 2xl:text-3xl leading-normal font-bold font-inter rtl:font-alexandria mb-6 lg:mb-7 xl:mb-8 2xl:mb-9\"><span class=\"text-primary\" style=\"color: rgb(26, 188, 156);\">Vision</span></div>\n<p class=\"text-whitely-50\"><span class=\"text-primary\" style=\"color: rgb(26, 188, 156);\">Develop highly qualified health workforce able to support the health system and promote health and wellbeing.</span></p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
       }
     }
   ],
