Create reusable tab and add it to main content and sidebar main content

--- a/uSync/v9/Content/page-2_awolglmh.config
+++ b/uSync/v9/Content/page-2_awolglmh.config
@@ -13,6 +13,9 @@
     <Template />
   </Info>
   <Properties>
+    <fontSize>
+      <Value><![CDATA[]]></Value>
+    </fontSize>
     <newPage>
       <Value><![CDATA[0]]></Value>
     </newPage>
@@ -21,7 +24,7 @@
   "layout": {
     "Umbraco.BlockGrid": [
       {
-        "contentUdi": "umb://element/5c7cb2f3693c4efa85bf6ca074242d67",
+        "contentUdi": "umb://element/543632eec3f54fbfa042ea09d48feef7",
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
@@ -30,9 +33,9 @@
   },
   "contentData": [
     {
-      "contentTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
-      "udi": "umb://element/5c7cb2f3693c4efa85bf6ca074242d67",
-      "contentItem": "umb://document/78237ec961174970a9975388f2de4153"
+      "contentTypeKey": "6298d8f1-3da6-4636-9635-4ab860bad3dd",
+      "udi": "umb://element/543632eec3f54fbfa042ea09d48feef7",
+      "contentItem": "umb://document/18cbc45067104ca59d68a99d0cd63d7c"
     }
   ],
   "settingsData": []
