--- a/uSync/v9/ContentTypes/mainsidebar.config
+++ b/uSync/v9/ContentTypes/mainsidebar.config
@@ -24,6 +24,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>48153f41-7b59-417f-b4da-b76540c8500c</Key>
+      <Name>Font Size</Name>
+      <Alias>fontSize</Alias>
+      <Definition>2e6d3631-066e-44b8-aec4-96f09099b2b5</Definition>
+      <Type>Umbraco.Integer</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Enter the font size for the title page, to display it for the sidebar navigation.]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>9f609b22-bb31-4a63-a99c-45a53e0c45f8</Key>
       <Name>New Page</Name>
       <Alias>newPage</Alias>
