--- a/uSync/v9/ContentTypes/sitesettings.config
+++ b/uSync/v9/ContentTypes/sitesettings.config
@@ -26,6 +26,7 @@
   <Structure>
     <ContentType Key="679e8134-64ee-4dcc-b701-3a7617fd47be" SortOrder="0">pageTags</ContentType>
     <ContentType Key="0ad3f81b-5202-4ce6-931f-9f6157dd4a10" SortOrder="1">reusableContentRepository</ContentType>
+    <ContentType Key="f16ef673-6d22-4f31-91c6-d19228db8e7c" SortOrder="2">reusableTabRepository</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
