--- a/uSync/v9/Content/page-2.config
+++ b/uSync/v9/Content/page-2.config
@@ -13,6 +13,9 @@
     <Template />
   </Info>
   <Properties>
+    <fontSize>
+      <Value><![CDATA[]]></Value>
+    </fontSize>
     <newPage>
       <Value><![CDATA[1]]></Value>
     </newPage>
