--- a/uSync/v9/DataTypes/BlockGridMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridMainContent.config
@@ -600,27 +600,6 @@
     },
     {
       "allowAtRoot": true,
-      "allowInAreas": true,
-      "areaGridColumns": null,
-      "areas": [],
-      "backgroundColor": null,
-      "columnSpanOptions": [],
-      "contentElementTypeKey": "ca5927f5-d6fb-4364-aa85-fcfbc97f93f6",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
-      "groupKey": null,
-      "iconColor": null,
-      "inlineEditing": false,
-      "label": "",
-      "rowMaxSpan": 1,
-      "rowMinSpan": 1,
-      "settingsElementTypeKey": null,
-      "stylesheet": "~/css/styles.css",
-      "thumbnail": null,
-      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
-    },
-    {
-      "allowAtRoot": true,
       "allowInAreas": false,
       "areaGridColumns": null,
       "areas": [
@@ -651,7 +630,7 @@
           "rowSpan": 1,
           "specifiedAllowance": [
             {
-              "elementTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
+              "elementTypeKey": "6298d8f1-3da6-4636-9635-4ab860bad3dd",
               "groupKey": null,
               "maxAllowed": null,
               "minAllowed": null
@@ -674,6 +653,27 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "allowAtRoot": false,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "6298d8f1-3da6-4636-9635-4ab860bad3dd",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "{{ $layout.$block.content.contentTypeName }}: {{ contentItem | ncNodeName }}",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": "~/css/styles.css",
+      "thumbnail": null,
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     }
   ],
   "CreateLabel": null,
