--- a/uSync/v9/Content/page-1_mdjj4p2p.config
+++ b/uSync/v9/Content/page-1_mdjj4p2p.config
@@ -13,6 +13,11 @@
     <Template />
   </Info>
   <Properties>
+
+    <fontSize>
+      <Value><![CDATA[]]></Value>
+    </fontSize>
+
     <newPage>
       <Value><![CDATA[0]]></Value>
     </newPage>
@@ -21,13 +26,9 @@
   "layout": {
     "Umbraco.BlockGrid": [
       {
-        "contentUdi": "umb://element/8744486858054c71bef3396a7ca5bed1",
-        "areas": [],
-        "columnSpan": 12,
-        "rowSpan": 1
-      },
-      {
-        "contentUdi": "umb://element/7752520d3aef493eb6c135cf7675fbf7",
+
+        "contentUdi": "umb://element/de024cec3dc04ee89dd51049cefdb29d",
+
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
@@ -36,14 +37,11 @@
   },
   "contentData": [
     {
-      "contentTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
-      "udi": "umb://element/8744486858054c71bef3396a7ca5bed1",
-      "contentItem": "umb://document/01d5ffb0c39244b2af42c2af0ab9c382"
-    },
-    {
-      "contentTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
-      "udi": "umb://element/7752520d3aef493eb6c135cf7675fbf7",
-      "contentItem": "umb://document/caccb18c0c4d4413ac609005d129d636"
+
+      "contentTypeKey": "6298d8f1-3da6-4636-9635-4ab860bad3dd",
+      "udi": "umb://element/de024cec3dc04ee89dd51049cefdb29d",
+      "contentItem": "umb://document/18cbc45067104ca59d68a99d0cd63d7c"
+
     }
   ],
   "settingsData": []
