--- a/uSync/v9/DataTypes/BlockGridSidebarMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridSidebarMainContent.config
@@ -79,13 +79,17 @@
       "areas": [],
       "backgroundColor": null,
       "columnSpanOptions": [],
-      "contentElementTypeKey": "216b076d-b32a-4a7a-b74e-996667163d5f",
+
+      "contentElementTypeKey": "6298d8f1-3da6-4636-9635-4ab860bad3dd",
+
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "groupKey": null,
       "iconColor": null,
       "inlineEditing": false,
-      "label": "",
+
+      "label": "{{ $layout.$block.content.contentTypeName }}: {{ contentItem | ncNodeName }}",
+
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
