--- a/uSync/v9/Content/news.config
+++ b/uSync/v9/Content/news.config
@@ -1,24 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="caccb18c-0c4d-4413-ac60-9005d129d636" Alias="News" Level="4">
+
+<Content Key="316e3932-013b-47b7-a0ce-1b28ba0cb7a5" Alias="News" Level="4">
   <Info>
-    <Parent Key="8e1809c2-f657-45b0-8c75-bdc77d33db01">Reusable Content</Parent>
-    <Path>/Home/SiteSettings/ReusableContent/News</Path>
+    <Parent Key="a2545632-d6bd-45ad-9db7-42176812d2fd">Reusable Tab</Parent>
+    <Path>/Home/SiteSettings/ReusableTab/News</Path>
     <Trashed>false</Trashed>
-    <ContentType>reusableContentItem</ContentType>
-    <CreateDate>2025-04-29T11:14:38</CreateDate>
+    <ContentType>reusableTabItem</ContentType>
+    <CreateDate>2025-04-30T16:20:55</CreateDate>
     <NodeName Default="News" />
-    <SortOrder>1</SortOrder>
+    <SortOrder>0</SortOrder>
+
     <Published Default="true" />
     <Schedule />
     <Template />
   </Info>
   <Properties>
-    <mainContent>
+
+    <reusableTab>
+
       <Value><![CDATA[{
   "layout": {
     "Umbraco.BlockGrid": [
       {
-        "contentUdi": "umb://element/7bdfb09341954cf7a6c9741f008b9a3d",
+
+        "contentUdi": "umb://element/f2cf115ebf1044048565cc729d4ebafa",
+
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
@@ -28,120 +34,92 @@
   "contentData": [
     {
       "contentTypeKey": "ca5927f5-d6fb-4364-aa85-fcfbc97f93f6",
-      "udi": "umb://element/7bdfb09341954cf7a6c9741f008b9a3d",
+
+      "udi": "umb://element/f2cf115ebf1044048565cc729d4ebafa",
+
       "title": "News",
       "cards": {
         "layout": {
           "Umbraco.BlockList": [
             {
-              "contentUdi": "umb://element/b01c8b1ed6804708bde80abbbe50b005"
+
+              "contentUdi": "umb://element/aeb5415e3c8449889cde13e32b9c1f32"
             },
             {
-              "contentUdi": "umb://element/d98eea14d7c74490a6d2502284299cf5"
+              "contentUdi": "umb://element/480836cd70d747c79d9af4069261bcec"
             },
             {
-              "contentUdi": "umb://element/4cfabb46c9914bd0b02f45d84731461b"
-            },
-            {
-              "contentUdi": "umb://element/4b601934250a47b3ab9036040863bf41"
-            },
-            {
-              "contentUdi": "umb://element/0e3461de6fd0432e9b29a4f2b4d5535a"
+              "contentUdi": "umb://element/796c9806d19a40d3af4b9a0378114f56"
+
             }
           ]
         },
         "contentData": [
           {
             "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/b01c8b1ed6804708bde80abbbe50b005",
+
+            "udi": "umb://element/aeb5415e3c8449889cde13e32b9c1f32",
             "image": [
               {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
+                "key": "38a8f7ca-917e-4b71-b53f-b240db3937a1",
+                "mediaKey": "4b67804e-bd4b-46c3-a174-2f86f99cea70"
               }
             ],
-            "date": "2025-04-27T00:00:00",
+            "date": "2025-04-21T00:00:00",
+
             "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
             "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
             "link": [
               {
                 "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+
+                "udi": "umb://document/42d78374528a40c088e6e8ded5e3efe2"
+
               }
             ]
           },
           {
             "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/d98eea14d7c74490a6d2502284299cf5",
+
+            "udi": "umb://element/480836cd70d747c79d9af4069261bcec",
             "image": [
               {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
+                "key": "38a8f7ca-917e-4b71-b53f-b240db3937a1",
+                "mediaKey": "4b67804e-bd4b-46c3-a174-2f86f99cea70"
               }
             ],
-            "date": "2024-04-24T00:00:00",
+            "date": "2024-04-16T00:00:00",
+
             "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
             "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
             "link": [
               {
                 "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+
+                "udi": "umb://document/42d78374528a40c088e6e8ded5e3efe2"
+
               }
             ]
           },
           {
             "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/4cfabb46c9914bd0b02f45d84731461b",
+
+            "udi": "umb://element/796c9806d19a40d3af4b9a0378114f56",
             "image": [
               {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
+                "key": "38a8f7ca-917e-4b71-b53f-b240db3937a1",
+                "mediaKey": "4b67804e-bd4b-46c3-a174-2f86f99cea70"
               }
             ],
-            "date": "2023-04-28T00:00:00",
+            "date": "2023-04-12T00:00:00",
+
             "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
             "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
             "link": [
               {
                 "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          },
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/4b601934250a47b3ab9036040863bf41",
-            "image": [
-              {
-                "key": "ff9e3e89-5a2f-4bba-8b7c-65a96efbe8e8",
-                "mediaKey": "98b6de3f-348e-485a-9ef5-575f5998d803"
-              }
-            ],
-            "date": "2025-04-27T00:00:00",
-            "title": "TDRA empowers youth for a sustainable future through \"Digital Skills Forum\" on International Youth Day",
-            "shortDescription": "In alignment with the UAE government's visionary theme for 2023, \"Today for Tomorrow,\" the forum epitomized TDRA's dedication to fostering the next generation of leaders and visionaries who will drive sustainable growth in the digital era.",
-            "link": [
-              {
-                "name": "View details",
-                "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
-              }
-            ]
-          },
-          {
-            "contentTypeKey": "6b2762c3-44b2-4b8f-bee4-fea4d287f2b0",
-            "udi": "umb://element/0e3461de6fd0432e9b29a4f2b4d5535a",
-            "image": [
-              {
-                "key": "f192b020-040f-4543-bf61-549604e574f7",
-                "mediaKey": "c9443421-1281-4239-b26c-883608f79340"
-              }
-            ],
-            "date": "2025-04-23T00:00:00",
-            "title": "This is a title ",
-            "shortDescription": "The description is short to presentation. Please enter long and try it.",
-            "link": [
-              {
-                "name": "View details",
+
+
                 "udi": "umb://document/42d78374528a40c088e6e8ded5e3efe2"
               }
             ]
@@ -153,6 +131,8 @@
   ],
   "settingsData": []
 }]]></Value>
-    </mainContent>
+
+    </reusableTab>
+
   </Properties>
 </Content>
